--- a/src/components/portal/CreateAcc.css
+++ b/src/components/portal/CreateAcc.css
@@ -1,10 +1,9 @@
-.Login {
+.CreateAcc {
     text-align: left;
     padding-left: 5vw;
     padding-top: 1vw;
 }
 
 input {
-
     display: block;
 }
