--- a/src/components/storebank/StoreBank.css
+++ b/src/components/storebank/StoreBank.css
@@ -1,9 +1,5 @@
-.Login {
+.ProductList {
     text-align: left;
     padding-left: 5vw;
     padding-top: 1vw;
-}
-
-input {
-    display: block;
 }
