--- a/src/components/storebank/StoreBank.css
+++ b/src/components/storebank/StoreBank.css
@@ -1,4 +1,9 @@
 .ProductList {
+     text-align: left;
+     padding-left: 5vw;
+     padding-top: 1vw;
+ }
+.PortfolioList {
     text-align: left;
     padding-left: 5vw;
     padding-top: 1vw;
