--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.logo {
+  padding-left: 3vw;
 }
 
 .App-header {
